src/snapshots/alma__infer__tests__test_infer_module__exposing-2.snap
---
source: src/infer.rs
assertion_line: 1973
expression: "infer(\"\nmodule Test exposing (a, b)\n\na = 1\n\nb = 2\n           \")"

---
Input:


module Test exposing (a, b)

a = 1

b = 2
           

---
Output:

module Test

a : ∀ ∅ . Float

b : ∀ ∅ . Float
