src/snapshots/alma__infer__tests__test_infer_module__exposing_lambdas_with_patterns_in_params.snap
---
source: src/infer.rs
assertion_line: 2519
expression: "infer(\"module Test exposing (last)\n\nlast _ y = y\n\")"
---
Input:

module Test exposing (last)

last _ y = y


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

last : ∀ a b . a -> b -> b
