src/snapshots/alma__infer__tests__test_infer_module__exposing_type-4.snap
---
source: src/infer.rs
assertion_line: 2217
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a = Banana a\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit a = Banana a


---
Output:

module Test




