src/snapshots/alma__infer__tests__test_infer_module__exposing_type-5.snap
---
source: src/infer.rs
assertion_line: 2647
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a b = Banana a\n\")"
---
Input:

module Test exposing (Fruit)

type Fruit a b = Banana a


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test




