src/snapshots/alma__infer__tests__test_infer_module__exposing_type.snap
---
source: src/infer.rs
assertion_line: 2196
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit = Banana\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit = Banana


---
Output:

module Test




