src/snapshots/alma__infer__tests__test_infer_module__exposing_union_type_constructor-2.snap
---
source: src/infer.rs
assertion_line: 2277
expression: "infer(\"\\\nmodule Test exposing (Fruit(Banana))\n\ntype Fruit = Banana\n\")"

---
Input:

module Test exposing (Fruit(Banana))

type Fruit = Banana


---
Output:

module Test

Banana : ∀ ∅ . Fruit


